/news の作成とドキュメント追記
